# endoscope

./: BrewLib.hs  Endoscope.hs  Endoscope.tex  LICENSE  Life.hs  MatMul.hs  README.md  biblio.bib  build.sh  catgist.rb  endoscope.cabal  get_deps.sh  makebench.sh  runtests.sh  stack.yaml
hasktests/: Check.hs  Profile.hs  Unit.hs
src/: Bench.hs  BrewLib.hs  Endoscope.hs  Life.hs  MatMul.hs  endo.py  main.hs  min_dom_z3.py  mult.c
test/: Unit.hs
